<resources>
    <string name="app_name">calculator</string>
    <string name="string">0</string>
    <string name="string1">1</string>
    <string name="string2">2</string>
    <string name="string3">3</string>
    <string name="string4">4</string>
    <string name="string5">5</string>
    <string name="string6">6</string>
    <string name="string7">7</string>
    <string name="string8">8</string>
    <string name="string9">9</string>
    <string name="stringDot">.</string>
    <string name="string11">=</string>
    <string name="string12">+</string>
    <string name="string13">-</string>
    <string name="string14">/</string>
    <string name="string15">*</string>
    <string name="string16">+/-</string>
    <string name="string17">%</string>
    <string name="string18">AC</string>
    <string name="string19">0</string>

</resources>